<?xml version="1.0" encoding="UTF-8"?>
<!--
    JSONSchemaTools - Generators and validator for JSON schema, with abstract values

    Copyright 2022 University of Mons, University of Antwerp

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--
    ================================= PROJECT INFO ==============================
    -->
    <groupId>be.ac.umons.jsonschematools</groupId>
    <artifactId>jsonschematools</artifactId>
    <version>2.0</version>
    <packaging>pom</packaging>

    <name>JSON Schema tools</name>
    <description>Validator and generator for JSON Schemas and documents</description>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>DocSkellington</id>
            <name>Gaëtan Staquet</name>
            <email>gaetan.staquet@umons.ac.be</email>
            <organization>F.R.S.-FNRS, University of Mons and University of Antwerp, PhD Student</organization>
            <organizationUrl>https://www.frs-fnrs.be/en/, https://web.umons.ac.be/en/ and https://www.uantwerpen.be/en/</organizationUrl>
            <roles>
                <role>Developer</role>
                <role>Maintainer</role>
            </roles>
        </developer>
    </developers>

    <distributionManagement>
        <site>
            <id>apidoc</id>
            <url>file:${user.dir}/docs/api/</url>
        </site>
    </distributionManagement>

    <!--
    ================================= MODULES ===================================
    -->
    <modules>
        <module>core</module>
        <module>generator</module>
        <module>validator</module>
    </modules>

    <!--
    ===============================	SCM =======================
    -->
    <scm>
        <connection>scm:git:git@github.com:DocSkellington/JSONSchemaTools.git</connection>
        <developerConnection>scm:git:git@github.com:DocSkellington/JSONSchemaTools.git</developerConnection>
        <url>https://github.com/DocSkellington/JSONSchemaTools/tree/main</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <url>https://github.com/DocSkellington/JSONSchemaTools/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <!--
    ================================= PROPERTIES ================================
    -->
    <properties>
        <!-- Global configuration -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.sourceEncoding>UTF-8</project.reporting.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <!-- Custom properties -->
        <javadoc-plugin.conf.release>8</javadoc-plugin.conf.release>

        <!-- Dependency versions -->
        <json.version>20220320</json.version>
        <testng.version>7.6.1</testng.version>
        <javadoc-plugin.version>3.4.1</javadoc-plugin.version>
        <source-plugin.version>3.2.1</source-plugin.version>
        <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
        <project-reports.version>3.4.1</project-reports.version>
        <site-plugin.version>4.0.0-M3</site-plugin.version>

        <!-- Javadoc links -->
        <java.apidocs>http://docs.oracle.com/javase/8/docs/api/</java.apidocs>
    </properties>

    <!--
    ================================= DEPENDENCIES ==============================
    -->
    <dependencyManagement>
        <dependencies>
            <!-- Internal dependencies -->
            <dependency>
                <groupId>be.ac.umons.jsonschematools</groupId>
                <artifactId>jsonschematools-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.ac.umons.jsonschematools</groupId>
                <artifactId>jsonschematools-generator</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.ac.umons.jsonschematools</groupId>
                <artifactId>jsonschematools-validator</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
            </dependency>

            <!-- JSON -->
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>${json.version}</version>
            </dependency>

            <!-- TestNG -->
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!--
    ================================= BUILD PLUGINS =============================
    -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${source-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>${site-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${javadoc-plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <detectLinks>true</detectLinks>
                    <linksource>false</linksource>
                    <links>
                        <link>${java.apidocs}</link>
                    </links>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <trimStackTrace>false</trimStackTrace>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!--
    ================================= REPORTING PLUGINS ==============================
    -->
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>${project-reports.version}</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>index</report>
                            <report>licenses</report>
                            <report>team</report>
                            <report>mailing-lists</report>
                            <report>scm</report>
                            <report>issue-management</report>
                            <report>ci-management</report>
                            <report>dependencies</report>
                            <report>dependency-info</report>
                            <report>modules</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <reportSets>
                    <reportSet>
                        <id>non-aggregate</id>
                        <reports>
                            <report>javadoc</report>
                        </reports>
                    </reportSet>
                    <reportSet>
                        <id>aggregate</id>
                        <inherited>false</inherited>
                        <reports>
                            <report>aggregate</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>
</project>
